--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -12,6 +12,15 @@ body {
 .container-fluid{
   height: calc(100vh - 94px);
 }
+// .kep-login-facebook {
+//   width: 100%;
+//   height: 20px;
+//   justify-content: center;
+//   background-color: #4267b2; 
+//   color: white;
+//    border-radius: 20px;
+//     border-width: 1px;
+// }
 @media (min-width: 992px)
         {
         html:not([dir="rtl"]) 
