--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,9 +1,88 @@
 // Here you can add other styles
 body {
   font-family: "Kanit", sans-serif !important;
+  background-color: transparent  !important;
 }
+
+.with-arrow .nav-link.active {
+  position: relative;
+}
+
+.with-arrow .nav-link.active::after {
+  content: '';
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #2b90d9;
+  position: absolute;
+  bottom: -6px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: block;
+}
+
+/* lined tabs */
+
+.lined .nav-link {
+  border: none;
+  border-bottom: 3px solid transparent;
+}
+
+.lined .nav-link:hover {
+  border: none;
+  border-bottom: 3px solid transparent;
+}
+
+.lined .nav-link.active {
+  background: none;
+  color: #555;
+  border-color: #2b90d9;
+}
+
+/*
+*
+* ==========================================
+* FOR DEMO PURPOSE
+* ==========================================
+*
+*/
+
+// body {
+//   background: #304352;
+//   background: -webkit-linear-gradient(to right, #304352, #d7d2cc);
+//   background: linear-gradient(to right, #304352, #d7d2cc);
+//   min-height: 100vh;
+// }
+
+.nav-pills .nav-link {
+  color: #555;
+}
+.text-uppercase {
+  letter-spacing: 0.1em;
+}
+
+
+.cd-section {
+  // background-size: cover;
+  // background-repeat: no-repeat;
+  // background-position: center center;
+  // // background:  no-repeat top fixed;
+
+  background-position: center center;
+  background:  no-repeat top fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.cd-section--bg-fixed {
+  min-height: 100vh;
+  background-attachment: fixed;
+}
+
+
 .main {
-  background-color: #fff;
+  background: transparent !important;
   
 }
 .main .container-fluid{
@@ -17,6 +96,9 @@ body {
   font-size: 18px;
   padding-top: 12px;
   color: #777777;
+}
+.row-branch {
+  background-color: transparent !important;
 }
 
 @media (min-width: 992px)
@@ -59,15 +141,16 @@ body {
 @media only screen and (min-width: 320px) {
   .app-header {
     height: 95px;
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
+    background-color: #fbfbfb;
+    border-color: transparent;
+    
     
   }
   .title-menu {
     padding-left: 12px;
     font-size: 12px;
     padding-top: 12px;
-    color: #777777;
+    color: #B38D4D;
     font-weight: bold;
   }
 
@@ -76,15 +159,15 @@ body {
 @media only screen and (min-width: 360px) {
   .app-header {
     height: 95px;
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
+    background-color: #fbfbfb;
+    border-color: transparent;
     
   }
   .title-menu {
     padding-left: 12px;
     font-size: 12px;
     padding-top: 12px;
-    color: #777777;
+    color: #B38D4D;
   }
 
 
@@ -92,15 +175,14 @@ body {
 @media only screen and (min-width: 420px) {
   .app-header {
     height: 95px;
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
-    
+    background-color: #fbfbfb;
+    border-color: transparent;
   }
   .title-menu {
     padding-left: 12px;
     font-size: 14px;
     padding-top: 12px;
-    color: #777777;
+    color: #B38D4D;
   }
 
 
@@ -108,29 +190,29 @@ body {
 @media only screen and (min-width: 480px) {
   .app-header {
     height: 95px;
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
+    background-color: #fbfbfb;
+    border-color: transparent;
   }
   .title-menu {
     padding-left: 12px;
     font-size: 18px;
     padding-top: 12px;
-    color: #777777;
+    color: #B38D4D;
   }
 
 }
 @media only screen and (min-width: 600px) {
   .app-header {
     height: 95px;
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
+    background-color: #fbfbfb;
+    border-color: transparent;
   }
 
   .title-menu {
     padding-left: 12px;
     font-size: 18px;
     padding-top: 12px;
-    color: #777777;
+    color: #B38D4D;
   }
 }
 
@@ -138,15 +220,15 @@ body {
 @media only screen and (min-width: 768px) {
   .app-header {
     height: 95px;
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
+    background-color: #fbfbfb;
+    border-color: transparent;
 
   }
   .title-menu {
     padding-left: 12px;
     font-size: 18px;
     padding-top: 12px;
-    color: #777777;
+    color: #B38D4D;
   }
 }
 
@@ -154,14 +236,14 @@ body {
 @media only screen and (min-width: 992px) {
   .app-header {
     height: 95px;
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
+    background-color: #fbfbfb;
+    border-color: transparent;
   }
   .title-menu {
     padding-left: 12px;
     font-size: 18px;
     padding-top: 12px;
-    color: #777777;
+    color: #B38D4D;
   }
 
 }
@@ -170,14 +252,14 @@ body {
 @media only screen and (min-width: 1200px) {
   .app-header {
     height: 95px ;
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
+    background-color: #fbfbfb;
+    border-color: transparent;
   }
   .title-menu {
     padding-left: 12px;
     font-size: 18px;
     padding-top: 12px;
-    color: #777777;
+    color: #B38D4D;
   }
   
 }
@@ -186,9 +268,9 @@ body {
 .app-body {
   margin-top: 95px !important;
 }
-.app-footer {  
-  border-color: #e7e7e7;
-}
+// .app-footer {  
+//   border-color: #e7e7e7;
+// }
 
 
 
@@ -397,12 +479,20 @@ h4{
   overflow: hidden;
 }
 
+.Bg-fluid-url { 
+  background:  no-repeat top fixed; 
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+}
+
 .No {
   width: 25px !important;
 }
-.card-footer {
-  text-align: right;
-}
+// .card-footer {
+//   text-align: right;
+// }
 
 .btn {
   margin-left: 4px;
@@ -806,17 +896,17 @@ th {
   padding: 0.5rem 0.5rem;
   margin-bottom: 0px;
 }
-.process-body {
-  flex: 1 1 auto;
-  padding: 0.5rem;
-  background-color: #f0f3f5;
-  border-top: 1px solid #c8ced3;
-}
-.process-footer {
-  padding: 0.5rem 0.5rem;
-  background-color: #f0f3f5;
-  border-top: 1px solid #c8ced3;
-}
+// .process-body {
+//   flex: 1 1 auto;
+//   padding: 0.5rem;
+//   background-color: #f0f3f5;
+//   border-top: 1px solid #c8ced3;
+// }
+// .process-footer {
+//   padding: 0.5rem 0.5rem;
+//   background-color: #f0f3f5;
+//   border-top: 1px solid #c8ced3;
+// }
 .css-1pcexqc-container {
   width: 80%;
 }
